--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT=4000
 S_KEY=passwordreset
-
+EMAIL: sidarthsidd123@gmail.com
+PASS:tkfw dtjy jqty wbog
 Db=mongodb+srv://jayaprakash:16p25l0052@jp.djhe0bu.mongodb.net/Rest-auth,
